Add SignUp to OpenAPI contract
